# dbt_w_trino_w_iceberg

./: .gitignore  README.md  TODO.md  compose.yaml  compose.yml  iceberg-nessie.properties  iceberg.properties  init-db.sql
airbyte/: catalog.json  data.csv  destination.json  ingest.sh  source.json
config/caddy/: Caddyfile
config/trino/: access-control.properties  config.properties  log.properties  start.sh
config/trino/catalog/: mydata.properties
data_products/_template/dbt/: dbt_project.yml  profiles.yml
data_products/_template/dbt/models/: mart_country_daily_sales_eur.sql  stg_sales.sql
data_products/_template/dbt/seeds/: exchange_rates.csv  sales.csv
data_products/test_dp_1/: .gitignore  dbt_project.yml  profiles.yml
data_products/test_dp_1/models/: anytoany.yaml
data_products/test_dp_1/seeds/: country.csv
data_products/test_dp_1/sources/: airbyte.yml
data_products/test_dp_2/dbt/: README.md  profiles.yml  pyproject.toml
dbt/: .user.yml  cli.py  dbt_project.yml  iceberg.properties  profiles.yml  pyproject.toml  test.py
dbt/models/: airbyte_count.sql  anytoany.yaml  anytoany_v1.0.sql
dbt/models/example/: incremental_model.sql  my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
dbt/seeds/: exchange_rates.csv
opa/policies/allow/: admin.rego  default.rego
opa/policies/cls/: default.rego
opa/policies/rls/: default.rego
story/: 1_dbt_and_trino.md  2_airbyte_and_no_polaris.md
tools/data_product_manager/: .gitignore  Dockerfile  pyproject.toml
tools/data_product_manager/src/: api.py  db.py  main.py
trino/: config.properties
(+4 files in other folders)
