[tool.poetry]
name = "dbt_w_trino_w_iceberg"
version = "0.1.0"
description = "A project using dbt with Trino and Iceberg"
authors = ["Hadrien Daures <hadrien.daures@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.8.7"
dbt-trino = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"