[tool.poetry]
name = "dbt_w_trino_w_iceberg"
version = "0.1.0"
description = "A project using dbt with Trino and Iceberg"
authors = ["Hadrien Daures <hadrien.daures@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.7"
dbt-trino = "^1.8.2"
trino = "^0.331.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.dev.dependencies]
pyiceberg = {extras = ["pandas", "pyarrow", "sql-postgres"], version = "^0.7.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"